# AURALIS-AUDIO

./: .gitignore  Cargo.toml  PHASES_4-8_RESEARCH.md  README.md
auralis-cli/: Cargo.toml
auralis-cli/src/: main.rs
auralis-core/: Cargo.toml
auralis-core/src/: graph.rs  lib.rs  pipewire_client.rs
auralis-core/tests/: graph_tests.rs  orb_tests.rs
auralis-net/: Cargo.toml
auralis-net/src/: lib.rs  signaling.rs  webrtc.rs
auralis-ui/: Cargo.toml
auralis-ui/src/: canvas.rs  clusters_view.rs  device_list.rs  main.rs  settings_view.rs  state.rs  style.css  window.rs
auralis-web/: Cargo.toml
auralis-web/src/: lib.rs
auralis-web/src/assets/: index.html
