[workspace]
members = [
    "auralis-core",
    "auralis-ui",
    "auralis-net",
    "auralis-web",
    "auralis-cli",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
gtk4 = "0.9"
libadwaita = "0.7"
pipewire = "0.8"
gstreamer = "0.23"
gstreamer-webrtc = "0.23"
gstreamer-sdp = "0.23"
futures = "0.3"
